Overlay layering: increase z-index to ensure they are on top of page header

--- a/src/assets/styling/overlay.scss
+++ b/src/assets/styling/overlay.scss
@@ -5,6 +5,6 @@
   background-color: rgb(33, 33, 33);
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 400;
   opacity: 0.46;
 }
